--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "event-counter"
+    "test": "mocha -r ts-node/register test/**/*.test.ts"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/cass-codes/event_counter/issues"
   },
-  "homepage": "https://github.com/cass-codes/event_counter#readme"
+  "homepage": "https://github.com/cass-codes/event_counter#readme",
+  "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.11.1",
+    "chai": "^4.2.0",
+    "cross-env": "^5.2.0",
+    "mocha": "^6.2.3",
+    "nyc": "^14.1.1",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.5.3"
+  }
 }
