--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "nyc": "^14.1.1",
     "ts-node": "^8.8.2",
     "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "collections": "^5.1.10"
   }
 }
